fix: Eliminate raw types and migrate URL validation to URI
Replace raw PortFactory with PortFactory<?> and raw Class with
Class<? extends Service> to improve type safety and eliminate
compiler warnings. Migrate URL validation from deprecated java.net.URL
constructor to java.net.URI with isAbsolute() check, preserving
backward compatibility for whitespace-padded URLs via trim().

Closes #101, closes #102, closes #103

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>